--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="after">
-                <a href="AfterMusic.html"><img src="After_Music.png"/></a>
+                <a href="After_Music.html"><img src="After_Music.png"/></a>
             </div>
             
             <div class="play">                
