--- a/After_Music.html
+++ b/After_Music.html
@@ -15,7 +15,7 @@
     
         <strong><a class="active" href="index.html">Home</a>
             <a href="#">Products</a>
-            <a href="#">Contact</a>
+            <a href="Contact.html">Contact</a>
         </strong>
       </div>
     
